By Mohammed Elamary

--- a/app/src/main/res/layout/activity_offline_survay.xml
+++ b/app/src/main/res/layout/activity_offline_survay.xml
@@ -158,8 +158,14 @@
                     </LinearLayout>
 
 
-
-
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="32"
+                        android:text="أضافة مدينة غير موجودة"
+                        android:textColor="#000" />
 
                     <EditText
                         android:id="@+id/edt_other_cities"
@@ -220,7 +226,14 @@
                             />
                     </LinearLayout>
 
-
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="32"
+                        android:text="أضافة حي غير موجود"
+                        android:textColor="#000" />
                     <EditText
                         android:id="@+id/edt_other_district"
                         android:layout_width="match_parent"
@@ -295,6 +308,14 @@
                     </LinearLayout>
 
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="العنوان"
+                        android:textColor="#000" />
 
                     <EditText
                         android:id="@+id/edt_address"
@@ -306,6 +327,15 @@
                         android:background="@drawable/editback"
                         android:inputType="text"
                         android:hint="العنوان" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="رقم الهاتف:"
+                        android:textColor="#000" />
                     <EditText
                         android:id="@+id/edt_phone"
                         android:layout_width="match_parent"
@@ -437,6 +467,14 @@
 
                     </RadioGroup>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="سرعة الانترنت بالميجابت لكل ثانيه" />
+                    android:textColor="#000" />
                     <EditText
                         android:id="@+id/edt_internetSeed"
                         android:layout_width="match_parent"
@@ -536,13 +574,15 @@
                         app:errorEnabled="true"
                         app:hintEnabled="false">
 
-                    <EditText
+                        <Button
                         android:id="@+id/edt_morning_shift_from"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:editable="false"
+                            android:textAlignment="viewEnd"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                         android:ems="10"
                         android:hint="بداية وقت الدوام الصباحي  "
                         android:inputType="none" />
@@ -574,7 +614,9 @@
                         android:layout_height="wrap_content"
                         app:errorEnabled="true">
 
-                        <EditText
+                        <Button
+                            android:textAlignment="viewEnd"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                             android:id="@+id/edt_morning_shift_to"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -615,7 +657,9 @@
                         app:errorEnabled="true"
                         app:hintEnabled="false">
 
-                    <EditText
+                        <Button
+                            android:textAlignment="viewEnd"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                         android:id="@+id/edt_evening_shift_from"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -654,7 +698,9 @@
                         android:layout_height="wrap_content"
                         app:errorEnabled="true">
 
-                        <EditText
+                        <Button
+                            android:textAlignment="viewEnd"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                             android:id="@+id/edt_evening_shift_to"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -685,6 +731,14 @@
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"/>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="عدد اجهزة الحاسب الآلي :"
+                        android:textColor="#000" />
                     <EditText
                         android:id="@+id/edt_computer_count"
                         android:layout_width="match_parent"
@@ -695,6 +749,15 @@
                         android:background="@drawable/editback"
                         android:inputType="number"
                         android:hint="عدد اجهزه الحاسب الآلي   " />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="ملاحظات علي اجهزة الحاسب الآلي :"
+                        android:textColor="#000" />
                     <EditText
                         android:id="@+id/edt_computer_notes"
                         android:layout_width="match_parent"
@@ -705,6 +768,15 @@
                         android:background="@drawable/editback"
                         android:inputType="textMultiLine"
                         android:hint="ملاحظات علي اجهزة الحاسب الآلي " />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="عدد الطابعات :"
+                        android:textColor="#000" />
                     <EditText
                         android:id="@+id/edt_printers_count"
                         android:layout_width="match_parent"
@@ -715,6 +787,15 @@
                         android:inputType="number"
                         android:maxLength="10"
                         android:hint="عدد الطابعات "  />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="ملاحظات علي عدد الطابعات :"
+                        android:textColor="#000" />
                     <EditText
                         android:id="@+id/edt_printers_notes"
                         android:layout_width="match_parent"
@@ -725,6 +806,15 @@
                         android:background="@drawable/editback"
                         android:inputType="textMultiLine"
                         android:hint="ملاحظات علي عدد الطابعات "  />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="عدد الماسحات الضوئية : "
+                        android:textColor="#000" />
                     <EditText
                         android:id="@+id/edt_scanners_count"
                         android:layout_width="match_parent"
@@ -735,6 +825,16 @@
                         android:background="@drawable/editback"
                         android:inputType="number"
                         android:hint="عدد الماسحات الضوئية  "  />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:ems="10"
+                        android:maxLength="255"
+                        android:text="ملاحظات علي عدد الماسحات الضوئية: "
+                        android:textColor="#000" />
+
                     <EditText
                         android:id="@+id/edt_scanners_notes"
                         android:layout_width="match_parent"
