--- a/app/src/main/res/layout/addroomdialog.xml
+++ b/app/src/main/res/layout/addroomdialog.xml
@@ -4,43 +4,62 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:padding="10dp" >
+    android:padding="10dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+         android:text=" اسم الغرفة :"
+        android:textColor="#000" />
 
     <EditText
         android:id="@+id/edt_roomName"
-        android:hint="اسم الغرفة"
-        android:inputType="text"
         android:layout_width="match_parent"
-        android:background="@drawable/editback"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_height="wrap_content" />
+        android:background="@drawable/editback"
+        android:hint="اسم الغرفة"
+        android:inputType="text" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+         android:text=" العدد :"
+        android:textColor="#000" />
     <EditText
         android:id="@+id/edt_roomDesc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/editback"
         android:hint="تجهيزات الغرفة "
         android:inputType="text"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:background="@drawable/editback"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content" />
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/edt_roomCount"
-        android:hint="العدد"
         android:layout_width="match_parent"
-        android:background="@drawable/editback"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:inputType="number"
-        />
+        android:background="@drawable/editback"
+        android:hint="العدد"
+        android:inputType="number" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+         android:text=" الأثاث :"
+        android:textColor="#000" />
     <EditText
         android:id="@+id/edt_roomFre"
-        android:hint="الأثاث"
         android:layout_width="match_parent"
-        android:background="@drawable/editback"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:inputType="text"
-        />
+        android:background="@drawable/editback"
+        android:hint="الأثاث"
+        android:inputType="text" />
 
 </LinearLayout>
