--- a/app/src/main/res/layout/fragment_form_four.xml
+++ b/app/src/main/res/layout/fragment_form_four.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:layoutDirection="ltr"
+    android:layoutDirection="rtl"
     android:orientation="vertical">
 
+    <TextView
+         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:textColor="#000"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+         android:ems="10"
+        android:text="ملاحظات عامة :"
+     />
     <EditText
         android:id="@+id/edt_notes"
         android:layout_width="match_parent"
@@ -20,9 +29,7 @@
         android:ems="10"
         android:hint="ملاحظات عامة "
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+/>
 
     <TextView
         android:id="@+id/textView2"
@@ -34,8 +41,7 @@
         android:textColor="#000"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/edt_notes"
-        app:layout_constraintTop_toBottomOf="@+id/edt_notes" />
+  />
 
     <TextView
         android:id="@+id/tvVisitDate"
@@ -43,9 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="sadsa"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+ />
 
     <TextView
 
@@ -58,10 +62,7 @@
         android:textColor="#000"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/tvVisitDate"
-        app:layout_constraintHorizontal_bias="0.594"
-        app:layout_constraintStart_toStartOf="@+id/tvVisitDate"
-        app:layout_constraintTop_toBottomOf="@+id/tvVisitDate" />
+/>
 
     <TextView
         android:id="@+id/tvLatLang"
@@ -69,10 +70,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+    />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
 
