--- a/app/src/main/res/layout/fragment_form_fragment_one.xml
+++ b/app/src/main/res/layout/fragment_form_fragment_one.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    android:layoutDirection="ltr"
-    >
+    android:layoutDirection="ltr">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -41,7 +39,13 @@
             android:layout_height="wrap_content"
             android:spinnerMode="dialog"
             />
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:textColor="#000"
+            android:layout_marginTop="10dp"
+            android:text="اخرى" />
         <EditText
             android:id="@+id/edt_other_cities"
             android:layout_width="match_parent"
@@ -67,6 +71,14 @@
             android:layout_height="wrap_content"
             android:spinnerMode="dialog"
             />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:text=" اخري : "
+            android:textColor="#000" />
         <EditText
             android:id="@+id/edt_other_district"
             android:layout_width="match_parent"
@@ -99,6 +111,14 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:text=" اسم المكتب : "
+            android:textColor="#000" />
         <EditText
             android:id="@+id/edt_office_name"
             android:layout_width="match_parent"
@@ -108,6 +128,14 @@
             android:background="@drawable/editback"
             android:inputType="text"
             android:hint="اسم المكتب" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:text=" العنوان : "
+            android:textColor="#000" />
         <EditText
             android:id="@+id/edt_address"
             android:layout_width="match_parent"
@@ -117,6 +145,14 @@
             android:background="@drawable/editback"
             android:inputType="text"
             android:hint="العنوان" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:text=" رقم الهاتف : "
+            android:textColor="#000" />
         <EditText
             android:id="@+id/edt_phone"
             android:layout_width="match_parent"
@@ -189,6 +225,13 @@
 
         </RadioGroup>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:text=" سرعة الانترنت بالميجابت لكل ثانيه : "
+            android:textColor="#000" />
         <EditText
             android:id="@+id/edt_internetSeed"
             android:layout_width="match_parent"
