--- a/app/src/main/res/layout/fragment_form_three.xml
+++ b/app/src/main/res/layout/fragment_form_three.xml
@@ -12,6 +12,13 @@
         android:orientation="vertical"
         >
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:textColor="#000"
+            android:text="عدد اجهزه الحاسب الآلي :  " />
         <EditText
             android:id="@+id/edt_computer_count"
             android:layout_width="match_parent"
@@ -21,6 +28,13 @@
             android:background="@drawable/editback"
             android:inputType="number"
             android:hint="عدد اجهزه الحاسب الآلي   " />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:textColor="#000"
+            android:text=" ملاحظات علي اجهزة الحاسب الآلي  :  " />
         <EditText
             android:id="@+id/edt_computer_notes"
             android:layout_width="match_parent"
@@ -30,6 +44,13 @@
             android:background="@drawable/editback"
             android:inputType="text"
             android:hint="ملاحظات علي اجهزة الحاسب الآلي " />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:text="عدد الطابعات : "
+            android:textColor="#000"/>
         <EditText
             android:id="@+id/edt_printers_count"
             android:layout_width="match_parent"
@@ -39,6 +60,13 @@
             android:background="@drawable/editback"
             android:inputType="number"
             android:hint="عدد الطابعات "  />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:text="ملاحظات علي عدد الطابعات: "
+            android:textColor="#000"/>
         <EditText
             android:id="@+id/edt_printers_notes"
             android:layout_width="match_parent"
@@ -48,6 +76,13 @@
             android:background="@drawable/editback"
             android:inputType="text"
             android:hint="ملاحظات علي عدد الطابعات "  />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:text="عدد الماسحات الضوئية: "
+            android:textColor="#000"/>
         <EditText
             android:id="@+id/edt_scanners_count"
             android:layout_width="match_parent"
@@ -57,6 +92,13 @@
             android:background="@drawable/editback"
             android:inputType="number"
             android:hint="عدد الماسحات الضوئية  "  />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:layout_marginTop="10dp"
+            android:text="ملاحظات علي عدد الماسحات الضوئية: "
+            android:textColor="#000"/>
         <EditText
             android:id="@+id/edt_scanners_notes"
             android:layout_width="match_parent"
