--- a/app/src/main/res/layout/addjobdialog.xml
+++ b/app/src/main/res/layout/addjobdialog.xml
@@ -42,4 +42,31 @@
         android:inputType="text"
 
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_height="60dp">
+
+
+        <Button
+            android:id="@+id/button_cancel_dialog"
+            android:text="الغاء"
+            android:layout_weight="1"
+            android:background="@drawable/corner_gray"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+           android:layout_marginRight="10dp"/>
+
+        <Button
+            android:id="@+id/button_add_dialog"
+            android:text="اضافة"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/corner_gray"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
